--- a/src/app/Authentication/ui/authentication.component.html
+++ b/src/app/Authentication/ui/authentication.component.html
@@ -1,2 +1,21 @@
-<div>ca marche
+<div class="login-container">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" >
+
+        <label for="email">Email</label>
+        <input type="email" formControlName="email" id="email"/>
+        <div *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched">
+            <small *ngIf="loginForm.get('email')?.errors?.['required']">Email is required.</small>
+            <small *ngIf="loginForm.get('email')?.errors?.['email']">Invalid email format.</small>
+        </div>
+
+        <label for="password">Password</label>
+        <input type="password" formControlName="password" id="password"/>
+        <div *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched">
+            <small *ngIf="loginForm.get('password')?.errors?.['required']">Password is required.</small>
+            <small *ngIf="loginForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters.</small>
+        </div>
+
+        <button type="submit">Login</button>
+    </form>
+    <p *ngIf="errorMessage" class="error"> {{errorMessage}}</p>
 </div>
