--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 //Style PrimeNG
 @import "primeicons/primeicons.css";
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Inter', sans-serif ;
+    font-size: 14px;
+}
+
+
