--- a/src/app/Home/ui/component/card/card.component.html
+++ b/src/app/Home/ui/component/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="card-container">
+<div class="card-container" (click)="onCardClick(activity.id)">
   <div class="image-container">
     <img src="assets/btz.jpg" alt="{{ activity.name }}" />
   </div>
