--- a/src/app/Home/ui/component/card/card.component.scss
+++ b/src/app/Home/ui/component/card/card.component.scss
@@ -1,6 +1,13 @@
 .card-container {
   width: 434px;
   height: 366px;
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
+}
+
+.card-container:hover {
+  transform: scale(1.02);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .image-container {
@@ -17,4 +24,8 @@
 
 .bold-font {
   font-weight: bold;
+}
+
+button {
+  cursor: pointer;
 }
