--- a/src/app/Home/ui/home.component.scss
+++ b/src/app/Home/ui/home.component.scss
@@ -7,3 +7,20 @@
   margin-left: 81px;
   margin-top: 87px;
 }
+
+.cardsCategories {
+  width: 434px;
+  height: 366px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 24px;
+  margin-left: 81px;
+  margin-top: 30px;
+}
+
+h1 {
+  display: flex;
+  justify-content: center;
+  font-size: 60px;
+  margin-top: 20px;
+}
