--- a/src/app/Home/ui/home.component.html
+++ b/src/app/Home/ui/home.component.html
@@ -1,4 +1,9 @@
-<app-search-categories (categorySelected)="onCategorySelected($event)" />
+<!-- <app-search-categories (categorySelected)="onCategorySelected($event)" /> -->
+<div class="hero-image">
+  <div class="hero-text">
+    <p>les meilleurs expériences autour de vous</p>
+  </div>
+</div>
 <div *ngIf="showFilter">
   <h1>{{ titleCategory }}</h1>
   <div class="cardsCategories">
