--- a/src/app/Home/ui/component/card/card.component.html
+++ b/src/app/Home/ui/component/card/card.component.html
@@ -2,10 +2,10 @@
   <div class="image-container">
     <img src="assets/btz.jpg" alt="{{ activity.name }}" />
   </div>
-  <div>
+  <div class="text-container">
     <p class="gray-font">{{ activity.category }}</p>
     <p class="bold-font">{{ activity.name }}</p>
     <p>{{ activity.price }} € / personne</p>
-    <p class="gray-font">{{ activity.city }} | {{ activity.duration }}h</p>
+    <p class="gray-font">{{ activity.city }} | {{ activity.duration }} h</p>
   </div>
 </div>
