--- a/src/app/Home/ui/home.component.scss
+++ b/src/app/Home/ui/home.component.scss
@@ -4,8 +4,8 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 24px;
-  margin-left: 81px;
   margin-top: 87px;
+  margin-left: 81px;
 }
 
 .cardsCategories {
@@ -23,4 +23,32 @@ h1 {
   justify-content: center;
   font-size: 60px;
   margin-top: 20px;
+}
+
+.hero-image {
+  background-image: url('/assets/hero-image.jpg');
+  height: 679px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  width: 481px;
+  height: 270px;
+  text-align: left;
+  position: absolute;
+  bottom: 140px;
+  left: 81px;
+  color: white;
+  p {
+    font-size: 100px;
+    margin: 0;
+    line-height: 90px;
+    font-weight: 400;
+    font-family: 'BigNoodleTitling', sans-serif;
+    font-style: normal;
+    text-transform: uppercase;
+  }
 }
