--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,8 @@
 //Style PrimeNG
 @import 'primeicons/primeicons.css';
 
+@import url('https://fonts.cdnfonts.com/css/bignoodletitling');
+
 * {
   margin: 0;
   padding: 0;
