--- a/src/app/Activity/ui/activity.component.html
+++ b/src/app/Activity/ui/activity.component.html
@@ -1,1 +1,13 @@
-<p>activity works!</p>
+<app-search-categories (categorySelected)="onCategorySelected($event)" />
+<div *ngIf="showFilter">
+  <h1>{{ titleCategory }}</h1>
+  <div class="cardsCategories">
+    <app-card *ngFor="let activity of filtredActivities" [activity]="activity" />
+    <div *ngIf="noActivitiesMessage" class="no-activities-message">
+      {{ noActivitiesMessage }}
+    </div>
+  </div>
+</div>
+<div class="cards" *ngIf="!showFilter">
+  <app-card *ngFor="let activity of activities" [activity]="activity" />
+</div>
