--- a/src/app/Footer/footer.component.html
+++ b/src/app/Footer/footer.component.html
@@ -1,1 +1,4 @@
-<p>footer works!</p>
+<div class="footer-container">
+  <img class="logo" src="assets/AIRVENTURE-LOGO1.png" alt="Airventure logo" />
+  <img class="icon" src="assets/logo-airventure-vert.svg" alt="icon airventure" />
+</div>
