--- a/src/app/Activity/ui/activity.component.scss
+++ b/src/app/Activity/ui/activity.component.scss
@@ -1,11 +1,13 @@
 .cards {
-  width: 434px;
-  height: 366px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 366px;
   gap: 24px;
-  margin-top: 87px;
+  margin-top: 16px;
   margin-left: 81px;
+  width: calc(434px * 3 + 48px);
+  max-height: calc(366px * 2 + 24px);
+  overflow: hidden;
 }
 
 .cardsCategories {
