--- a/src/app/Home/ui/home.component.scss
+++ b/src/app/Home/ui/home.component.scss
@@ -52,7 +52,7 @@ h1 {
   position: absolute;
   bottom: 140px;
   left: 81px;
-  color: white;
+  color: rgb(255, 255, 255) !important;
   p {
     font-size: 100px;
     margin: 0;
