--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,24 @@
 body {
   background-color: #ffffff;
 }
+
+//AUTH INPUT //
+.auth-input {
+  width: 420px;
+  height: 50px;
+  border-radius: 4px;
+  border: 1px solid rgba(192, 192, 192, 1);
+  padding-left: 21px;
+}
+
+.auth-button {
+  width: 100%;
+  height: 50px;
+  border-radius: 4px;
+  border: none;
+  background-color: rgba(69, 96, 84, 1);
+  color: rgba(255, 255, 255, 1);
+  font-size: 14px;
+  font-weight: 400;
+  cursor: pointer;
+}
